<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>sithterm</groupId>
	<artifactId>SithTerm</artifactId>
	<version>0.4.1</version>
	<name>SithTerm</name>
	<properties>
		<java.version>1.8</java.version>
	</properties>
	<description>A pluggable tabbed terminal using JediTerm</description>
	<repositories>
		<repository>
			<id>bintray-jetbrains-jediterm</id>
			<name>bintray-jediterm</name>
			<url>https://jetbrains.bintray.com/jediterm</url>
		</repository>
		<repository>
			<id>bintray-jetbrains-pty4j</id>
			<name>bintray</name>
			<url>https://jetbrains.bintray.com/pty4j</url>
		</repository>
	</repositories>
	<dependencies>
		<dependency>
			<groupId>org.jetbrains.jediterm</groupId>
			<artifactId>jediterm-pty</artifactId>
			<version>2.22</version>
		</dependency>
		<dependency>
			<groupId>org.jetbrains.pty4j</groupId>
			<artifactId>pty4j</artifactId>
			<version>0.9.5</version>
		</dependency>
		<dependency>
			<groupId>com.google.code.gson</groupId>
			<artifactId>gson</artifactId>
			<version>2.8.5</version>
		</dependency>
		<dependency>
			<groupId>log4j</groupId>
			<artifactId>log4j</artifactId>
			<version>1.2.17</version>
		</dependency>
		<dependency>
			<groupId>com.weblookandfeel</groupId>
			<artifactId>weblaf-ui</artifactId>
			<version>1.2.8</version>
		</dependency>
	</dependencies>
	<build>
		<sourceDirectory>src/</sourceDirectory>
		<resources>
			<resource>
				<directory>src/main/resources/</directory>
			</resource>
			<resource>
				<directory>src/sithterm/icons/</directory>
			</resource>
		</resources>
		<plugins>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.1</version>
				<configuration>
					<source>${java.version}</source>
					<target>${java.version}</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-assembly-plugin</artifactId>
				<configuration>
					<!-- get all project dependencies -->
					<descriptorRefs>
						<descriptorRef>jar-with-dependencies</descriptorRef>
					</descriptorRefs>
					<!-- MainClass in mainfest make a executable jar -->
					<archive>
						<manifest>
							<mainClass>sithterm.SithTermMainWindow</mainClass>
						</manifest>
					</archive>

				</configuration>
				<executions>
					<execution>
						<id>make-assembly</id>
						<!-- bind to the packaging phase -->
						<phase>package</phase>
						<goals>
							<goal>single</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>com.akathist.maven.plugins.launch4j</groupId>
				<artifactId>launch4j-maven-plugin</artifactId>
				<executions>
					<execution>
						<id>l4j-gui</id>
						<phase>package</phase>
						<goals>
							<goal>launch4j</goal>
						</goals>
						<configuration>
							<errTitle>SithTerm</errTitle>
							<downloadUrl>https://jdk.java.net/13/</downloadUrl>
							<supportUrl>https://github.com/myrlyn/SithTerminal</supportUrl>
							<headerType>gui</headerType>
							<outfile>target/SithTerm.exe</outfile>
							<jar>target/SithTerm-${project.version}-jar-with-dependencies.jar</jar>
							<errTitle>enccg</errTitle>
							<classPath>
								<mainClass>sithterm.SithTermMainWindow</mainClass>
							</classPath>
							<icon>src/main/resources/sw.ico</icon>
							<jre>
								<minVersion>1.8.0</minVersion>
								<initialHeapPercent>1</initialHeapPercent>
								<maxHeapPercent>90</maxHeapPercent>
								<opts>
									<opt>-XX:+AggressiveOpts</opt>
								</opts>
							</jre>
							<versionInfo>
								<fileVersion>0.0.1.0</fileVersion>
								<txtFileVersion>SNAPSHOT</txtFileVersion>
								<fileDescription>SithTerm Terminal Emulator</fileDescription>
								<copyright>Jonathon Walker (GPL)</copyright>
								<productVersion>0.0.1.0</productVersion>
								<txtProductVersion>SNAPSHOT</txtProductVersion>
								<productName>SithTerm</productName>
								<internalName>SithTerm</internalName>
								<originalFilename>SithTerm.exe</originalFilename>

							</versionInfo>
							<splash>
								<file>src/main/resources/star-wars.bmp</file>
								<waitForWindow>true</waitForWindow>
								<timeout>20</timeout>
							</splash>
							<messages>
								<bundledJreErr>THIS PROJECT DOES NOT HAVE A BUNDLED JRE</bundledJreErr>
								<jreVersionErr>WRONG JRE VERSION, 1.8.0 MINIMUM</jreVersionErr>
								<launcherErr>Launcher Error!</launcherErr>
							</messages>
						</configuration>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
</project>